--- a/kitchen.html
+++ b/kitchen.html
@@ -2,36 +2,41 @@
 <html lang="th">
 <head>
 <meta charset="UTF-8" />
-<title>👨‍🍳 Kitchen (Realtime)</title>
+<title>👨‍🍳 Kitchen (By Bill)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <link rel="icon" href="data:,">
 </head>
 
 <body class="bg-slate-900 text-white min-h-screen p-4">
 
+<audio id="dingSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
+
 <div class="max-w-7xl mx-auto">
-  <h1 class="text-2xl font-bold mb-4">👨‍🍳 หน้าครัว (Realtime)</h1>
+  <h1 class="text-2xl font-bold mb-4">👨‍🍳 หน้าครัว (แสดงเป็นบิล)</h1>
   <div id="billList" class="grid md:grid-cols-2 gap-4"></div>
 </div>
 
 <script>
 /* ================= CONFIG ================= */
-const sb = supabase.createClient(
-  "https://nvsptbbvxjulrpdebrhn.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss"
-)
+const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co"
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss"
+const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
 
 /* ================= STATE ================= */
 const billList = document.getElementById("billList")
+const ding = document.getElementById("dingSound")
+
 let productMap = {}
 let tableMap = {}
 let orderTableMap = {}
+let knownOrderIds = new Set()
 
-/* ================= MASTER ================= */
+/* ================= LOAD MASTER ================= */
 async function loadProducts() {
   const { data } = await sb.from("products").select("id,name")
   ;(data || []).forEach(p => productMap[p.id] = p.name)
@@ -43,11 +48,7 @@ async function loadTables() {
 }
 
 async function loadOrdersMap() {
-  const { data } = await sb
-    .from("orders")
-    .select("id,table_id")
-    .eq("status", "open")
-
+  const { data } = await sb.from("orders").select("id,table_id")
   orderTableMap = {}
   ;(data || []).forEach(o => {
     orderTableMap[o.id] = tableMap[o.table_id] || "-"
@@ -55,129 +56,126 @@ async function loadOrdersMap() {
 }
 
 /* ================= LOAD BILLS ================= */
-async function loadBills() {
-  billList.innerHTML = ""
-
-  const { data } = await sb
+async function loadBills(playSound = false) {
+  const { data, error } = await sb
     .from("order_items")
-    .select("*")
+    .select(`
+      id,
+      order_id,
+      product_id,
+      mix_sauce_id,
+      qty,
+      option_special,
+      option_mix,
+      status
+    `)
     .eq("status", "pending")
     .order("created_at", { ascending: true })
 
-  const grouped = {}
-  ;(data || []).forEach(it => {
-    if (!grouped[it.order_id]) grouped[it.order_id] = []
-    grouped[it.order_id].push(it)
+  if (error) {
+    console.error(error)
+    return
+  }
+
+  const rows = data || []
+  billList.innerHTML = ""
+
+  const bills = {}
+  rows.forEach(item => {
+    if (!bills[item.order_id]) bills[item.order_id] = []
+    bills[item.order_id].push(item)
   })
 
-  Object.entries(grouped).forEach(([orderId, items]) => {
+  let hasNew = false
+
+  Object.entries(bills).forEach(([orderId, items]) => {
+    if (!knownOrderIds.has(orderId)) {
+      knownOrderIds.add(orderId)
+      hasNew = true
+    }
+
+    const tableNo = orderTableMap[orderId] || "-"
     const card = document.createElement("div")
     card.className = "bg-slate-800 p-4 rounded-xl border border-slate-700"
 
-    card.innerHTML = `
-      <div class="flex justify-between items-center mb-2">
-        <div class="font-bold text-lg">
-          🍽️ โต๊ะ ${orderTableMap[orderId] || "-"}
+    const itemsHTML = items.map(it => {
+      const name = productMap[it.product_id] || "ไม่ทราบชื่อ"
+      const mixName =
+        it.option_mix && it.mix_sauce_id
+          ? productMap[it.mix_sauce_id]
+          : ""
+
+      return `
+        <div class="flex justify-between border-b border-slate-700 py-1">
+          <div>
+            ${name}
+            ${it.option_special ? "(พิเศษ)" : ""}
+            ${mixName ? `(ผสม ${mixName})` : ""}
+          </div>
+          <div class="font-bold">x ${it.qty}</div>
         </div>
-        <button data-confirm="${orderId}"
-          class="bg-green-600 px-3 py-1 rounded font-bold">
-          ✅ ยืนยันออร์เดอร์
+      `
+    }).join("")
+
+    card.innerHTML = `
+      <div class="flex justify-between items-center mb-3">
+        <div class="text-lg font-bold">🍽️ โต๊ะ ${tableNo}</div>
+        <button class="doneBill bg-green-600 px-4 py-1 rounded">
+          ✅ เสร็จทั้งบิล
         </button>
       </div>
-
-      ${items.map(it => `
-        <div class="flex justify-between items-center border-b py-1">
-          <div>${productMap[it.product_id]} x ${it.qty}</div>
-          <div class="flex gap-2">
-            <button data-dec="${it.id}" class="bg-slate-600 px-2 rounded">−</button>
-            <button data-inc="${it.id}" class="bg-slate-600 px-2 rounded">+</button>
-            <button data-cancel="${it.id}" class="bg-red-600 px-2 rounded">✕</button>
-          </div>
-        </div>
-      `).join("")}
+      ${itemsHTML}
     `
-    billList.appendChild(card)
-  })
-}
 
-/* ================= ACTIONS ================= */
-document.addEventListener("click", async e => {
-  const dec = e.target.dataset.dec
-  const inc = e.target.dataset.inc
-  const cancel = e.target.dataset.cancel
-  const confirm = e.target.dataset.confirm
+    card.querySelector(".doneBill").onclick = async () => {
+      const confirm = await Swal.fire({
+        title: `ยืนยันเสร็จทั้งบิล โต๊ะ ${tableNo}`,
+        icon: "question",
+        showCancelButton: true,
+        confirmButtonText: "เสร็จแล้ว",
+        cancelButtonText: "ยัง"
+      })
 
-  if (confirm) {
-    const ok = await Swal.fire({
-      title: "ยืนยันออร์เดอร์ทั้งบิล?",
-      icon: "question",
-      showCancelButton: true,
-      confirmButtonText: "ยืนยัน",
-      cancelButtonText: "ยกเลิก",
-      confirmButtonColor: "#16a34a",
-      cancelButtonColor: "#64748b"
-    })
-    if (!ok.isConfirmed) return
+      if (!confirm.isConfirmed) return
 
-    await sb.from("order_items")
-      .update({ status: "done" })
-      .eq("order_id", confirm)
-      .eq("status", "pending")
-  }
+      await sb
+        .from("order_items")
+        .update({ status: "done" })
+        .eq("order_id", orderId)
 
-  if (cancel) {
-    const ok = await Swal.fire({
-      title: "ยกเลิกรายการนี้?",
-      icon: "warning",
-      showCancelButton: true,
-      confirmButtonText: "ยกเลิก",
-      cancelButtonText: "ไม่",
-      confirmButtonColor: "#dc2626",
-      cancelButtonColor: "#64748b"
-    })
-    if (!ok.isConfirmed) return
-
-    await sb.from("order_items")
-      .update({ status: "cancelled" })
-      .eq("id", cancel)
-  }
-
-  if (dec || inc) {
-    const id = dec || inc
-    const { data:[item] } = await sb
-      .from("order_items")
-      .select("qty")
-      .eq("id", id)
-
-    const newQty = dec ? item.qty - 1 : item.qty + 1
-    if (newQty <= 0) {
-      await sb.from("order_items")
-        .update({ status: "cancelled" })
-        .eq("id", id)
-    } else {
-      await sb.from("order_items")
-        .update({ qty: newQty })
-        .eq("id", id)
-    }
-  }
-})
-
-/* ================= REALTIME ================= */
-sb.channel("kitchen-realtime")
-  .on(
-    "postgres_changes",
-    { event: "*", schema: "public", table: "order_items" },
-    () => loadBills()
-  )
-  .on(
-    "postgres_changes",
-    { event: "*", schema: "public", table: "orders" },
-    async () => {
-      await loadOrdersMap()
       loadBills()
     }
-  )
-  .subscribe()
+
+    billList.appendChild(card)
+  })
+
+  if (playSound && hasNew) {
+    ding.currentTime = 0
+    ding.play()
+  }
+}
+
+/* ================= REALTIME ================= */
+const channel = sb.channel("kitchen-bill")
+
+channel.on(
+  "postgres_changes",
+  { event: "INSERT", schema: "public", table: "order_items" },
+  async payload => {
+    if (payload.new.status === "pending") {
+      await loadOrdersMap()   // ⭐ สำคัญ
+      loadBills(true)
+    }
+  }
+)
+
+channel.on(
+  "postgres_changes",
+  { event: "UPDATE", schema: "public", table: "order_items" },
+  () => loadBills()
+)
+
+channel.subscribe()
 
 /* ================= INIT ================= */
 ;(async () => {
