--- a/kitchen.html
+++ b/kitchen.html
@@ -55,6 +55,21 @@ async function loadOrdersMap() {
   })
 }
 
+/* ================= UPDATE QTY ================= */
+async function updateQty(itemId, newQty) {
+  if (newQty <= 0) {
+    await sb
+      .from("order_items")
+      .update({ status: "cancelled" })
+      .eq("id", itemId)
+  } else {
+    await sb
+      .from("order_items")
+      .update({ qty: newQty })
+      .eq("id", itemId)
+  }
+}
+
 /* ================= LOAD BILLS ================= */
 async function loadBills(playSound = false) {
   const { data, error } = await sb
@@ -106,13 +121,24 @@ async function loadBills(playSound = false) {
           : ""
 
       return `
-        <div class="flex justify-between border-b border-slate-700 py-1">
+        <div class="flex justify-between items-center border-b border-slate-700 py-1">
           <div>
             ${name}
             ${it.option_special ? "(พิเศษ)" : ""}
             ${mixName ? `(ผสม ${mixName})` : ""}
           </div>
-          <div class="font-bold">x ${it.qty}</div>
+
+          <div class="flex items-center gap-2">
+            <button
+              class="px-2 bg-slate-600 rounded"
+              onclick="updateQty('${it.id}', ${it.qty - 1})">−</button>
+
+            <span class="font-bold">x ${it.qty}</span>
+
+            <button
+              class="px-2 bg-slate-600 rounded"
+              onclick="updateQty('${it.id}', ${it.qty + 1})">+</button>
+          </div>
         </div>
       `
     }).join("")
@@ -133,7 +159,9 @@ async function loadBills(playSound = false) {
         icon: "question",
         showCancelButton: true,
         confirmButtonText: "เสร็จแล้ว",
-        cancelButtonText: "ยัง"
+        cancelButtonText: "ยัง",
+        confirmButtonColor: "#16a34a",
+        cancelButtonColor: "#64748b"
       })
 
       if (!confirm.isConfirmed) return
@@ -163,7 +191,7 @@ channel.on(
   { event: "INSERT", schema: "public", table: "order_items" },
   async payload => {
     if (payload.new.status === "pending") {
-      await loadOrdersMap()   // ⭐ สำคัญ
+      await loadOrdersMap()
       loadBills(true)
     }
   }
