--- a/payment.html
+++ b/payment.html
@@ -8,7 +8,6 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
 <link rel="icon" href="data:,">
 </head>
 
@@ -24,7 +23,7 @@
 
   <!-- บิล -->
   <div class="col-span-9 bg-slate-800 rounded-xl p-4">
-    <h2 class="font-bold mb-3">🧾 บิล</h2>
+    <h2 class="font-bold mb-3">🧾 บิลรวมทั้งโต๊ะ</h2>
 
     <div id="billItems" class="space-y-2 mb-4"></div>
 
@@ -63,26 +62,19 @@ const sb = supabase.createClient(
 const PROMPTPAY_ID = "0936494961"
 
 /* ================= STATE ================= */
-let currentOrderId = null
 let currentTableId = null
+let paymentMethod = null
 let productMap = {}
 let tableMap = {}
-let paymentMethod = null
 
 /* ================= MASTER ================= */
 async function loadProducts() {
-  const { data } = await sb
-    .from("products")
-    .select("id,name,price")
-
+  const { data } = await sb.from("products").select("id,name,price")
   ;(data || []).forEach(p => productMap[p.id] = p)
 }
 
 async function loadTables() {
-  const { data } = await sb
-    .from("tables")
-    .select("id,table_no")
-
+  const { data } = await sb.from("tables").select("id,table_no")
   ;(data || []).forEach(t => tableMap[t.id] = t.table_no)
 }
 
@@ -90,24 +82,24 @@ async function loadTables() {
 async function loadOpenTables() {
   tableList.innerHTML = ""
 
-  // 🔒 เอาเฉพาะบิลที่ยังเปิดอยู่
   const { data: orders } = await sb
     .from("orders")
-    .select("id,table_id")
+    .select("table_id")
     .eq("status", "open")
 
-  ;(orders || []).forEach(o => {
+  const tableIds = [...new Set((orders || []).map(o => o.table_id))]
+
+  tableIds.forEach(tableId => {
     const btn = document.createElement("button")
     btn.className = "w-full bg-blue-600 py-2 rounded"
-    btn.textContent = `โต๊ะ ${tableMap[o.table_id]}`
-    btn.onclick = () => loadBill(o.id, o.table_id)
+    btn.textContent = `โต๊ะ ${tableMap[tableId]}`
+    btn.onclick = () => loadBillByTable(tableId)
     tableList.appendChild(btn)
   })
 }
 
-/* ================= LOAD BILL ================= */
-async function loadBill(orderId, tableId) {
-  currentOrderId = orderId
+/* ================= LOAD BILL BY TABLE ================= */
+async function loadBillByTable(tableId) {
   currentTableId = tableId
   paymentMethod = null
   payBtn.disabled = true
@@ -116,28 +108,37 @@ async function loadBill(orderId, tableId) {
 
   let total = 0
 
-  // ⭐ คิดเงินเฉพาะรายการที่ DONE เท่านั้น
-  const { data: items } = await sb
-    .from("order_items")
-    .select("product_id,qty")
-    .eq("order_id", orderId)
-    .eq("status", "done")
+  // 1️⃣ หา orders ที่ยังเปิดของโต๊ะนี้
+  const { data: orders } = await sb
+    .from("orders")
+    .select("id")
+    .eq("table_id", tableId)
+    .eq("status", "open")
 
-  ;(items || []).forEach(it => {
-    const p = productMap[it.product_id]
-    if (!p) return
+  // 2️⃣ รวม order_items ที่ DONE
+  for (const o of orders || []) {
+    const { data: items } = await sb
+      .from("order_items")
+      .select("product_id,qty")
+      .eq("order_id", o.id)
+      .eq("status", "done")
 
-    const price = p.price * it.qty
-    total += price
+    ;(items || []).forEach(it => {
+      const p = productMap[it.product_id]
+      if (!p) return
 
-    const div = document.createElement("div")
-    div.className = "flex justify-between border-b border-slate-700 py-1"
-    div.innerHTML = `
-      <div>${p.name} x ${it.qty}</div>
-      <div>${price} บาท</div>
-    `
-    billItems.appendChild(div)
-  })
+      const price = p.price * it.qty
+      total += price
+
+      const div = document.createElement("div")
+      div.className = "flex justify-between border-b border-slate-700 py-1"
+      div.innerHTML = `
+        <div>${p.name} x ${it.qty}</div>
+        <div>${price} บาท</div>
+      `
+      billItems.appendChild(div)
+    })
+  }
 
   totalPrice.textContent = total
 }
@@ -158,10 +159,10 @@ qrBtn.onclick = () => {
 
 /* ================= PAY ================= */
 payBtn.onclick = async () => {
-  if (!currentOrderId || !paymentMethod) return
+  if (!currentTableId || !paymentMethod) return
 
   const confirm = await Swal.fire({
-    title: "ยืนยันชำระเงิน?",
+    title: `ยืนยันชำระเงิน โต๊ะ ${tableMap[currentTableId]}?`,
     icon: "question",
     showCancelButton: true,
     confirmButtonText: "ชำระเงิน",
@@ -169,9 +170,9 @@ payBtn.onclick = async () => {
   })
   if (!confirm.isConfirmed) return
 
-  // ✅ ปิดบิลผ่าน function (ปลอดภัย ไม่ 400)
-  const { error } = await sb.rpc("close_order", {
-    p_order_id: currentOrderId,
+  // 3️⃣ ปิดทุก order ของโต๊ะนี้
+  const { error } = await sb.rpc("close_orders_by_table", {
+    p_table_id: currentTableId,
     p_method: paymentMethod
   })
 
@@ -180,15 +181,13 @@ payBtn.onclick = async () => {
     return
   }
 
-  // คืนโต๊ะ
+  // 4️⃣ คืนโต๊ะ
   await sb.from("tables")
     .update({ status: "available" })
     .eq("id", currentTableId)
 
   Swal.fire("สำเร็จ", "ปิดบิลเรียบร้อย", "success")
 
-  // reset
-  currentOrderId = null
   currentTableId = null
   billItems.innerHTML = ""
   totalPrice.textContent = 0
