--- a/index.html
+++ b/index.html
@@ -9,43 +9,45 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-
 </head>
 
-<body class="bg-slate-900 text-white min-h-screen p-4">
+<body class="bg-slate-900 text-white min-h-screen p-2 md:p-4">
 
 <!-- เสียงแจ้งเตือน -->
 <audio id="beepSound" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg"></audio>
 
-<div class="max-w-7xl mx-auto grid grid-cols-12 gap-4">
+<div class="
+  max-w-7xl mx-auto
+  grid grid-cols-1 gap-3
+  md:grid-cols-12 md:gap-4
+">
 
   <!-- โต๊ะ -->
-  <div class="col-span-3 bg-slate-800 rounded-xl p-4">
-    <h2 class="font-bold mb-3">🪑 โต๊ะ</h2>
-    <div id="tableList" class="grid grid-cols-2 gap-2"></div>
+  <div class="md:col-span-3 bg-slate-800 rounded-xl p-3">
+    <h2 class="font-bold mb-3 text-lg">🪑 โต๊ะ</h2>
+    <div id="tableList" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-2 gap-2"></div>
   </div>
 
   <!-- เมนู -->
-  <div class="col-span-5 bg-slate-800 rounded-xl p-4">
-    <h2 class="font-bold mb-2">📋 เมนู</h2>
+  <div class="md:col-span-5 bg-slate-800 rounded-xl p-3">
+    <h2 class="font-bold mb-2 text-lg">📋 เมนู</h2>
 
     <div class="flex gap-2 mb-3">
-      <button onclick="setCategory('ขนมจีน')" class="px-3 py-1 rounded bg-orange-600">🍜 ขนมจีน</button>
-      <button onclick="setCategory('เครื่องดื่ม')" class="px-3 py-1 rounded bg-blue-600">🥤 เครื่องดื่ม</button>
-      <button onclick="setCategory('ทานเล่น')" class="px-3 py-1 rounded bg-green-600">🍢 ทานเล่น</button>
+      <button onclick="setCategory('ขนมจีน')" class="flex-1 px-2 py-2 rounded bg-orange-600 text-sm">🍜 ขนมจีน</button>
+      <button onclick="setCategory('เครื่องดื่ม')" class="flex-1 px-2 py-2 rounded bg-blue-600 text-sm">🥤 เครื่องดื่ม</button>
+      <button onclick="setCategory('ทานเล่น')" class="flex-1 px-2 py-2 rounded bg-green-600 text-sm">🍢 ทานเล่น</button>
     </div>
 
     <div id="menuList" class="space-y-3"></div>
   </div>
 
   <!-- ตะกร้า -->
-  <div class="col-span-4 bg-slate-800 rounded-xl p-4">
-    <h2 class="font-bold mb-3">
+  <div class="md:col-span-4 bg-slate-800 rounded-xl p-3 sticky bottom-0 md:static">
+    <h2 class="font-bold mb-3 text-lg">
       🧾 โต๊ะ <span id="currentTable">-</span>
     </h2>
 
-    <div id="cartList" class="space-y-2 mb-4"></div>
+    <div id="cartList" class="space-y-2 mb-4 max-h-[40vh] overflow-y-auto"></div>
 
     <div class="border-t pt-3 space-y-2">
       <div class="flex justify-between font-bold text-lg">
@@ -56,7 +58,7 @@
       <button
         onclick="submitOrder()"
         id="sendBtn"
-        class="w-full bg-green-600 py-2 rounded disabled:opacity-40"
+        class="w-full bg-green-600 py-3 rounded text-lg disabled:opacity-40"
         disabled>
         🟢 ส่งออร์เดอร์
       </button>
@@ -89,7 +91,7 @@ async function loadTables() {
   data.forEach(t => {
     const btn = document.createElement("button")
     btn.className =
-      "p-2 rounded font-bold " +
+      "p-2 rounded font-bold text-sm " +
       (t.status === "occupied" ? "bg-red-600" : "bg-green-600")
     btn.textContent = "โต๊ะ " + t.table_no
     btn.onclick = () => {
@@ -112,7 +114,7 @@ async function loadMenu() {
 
   list.forEach(p => {
     const card = document.createElement("div")
-    card.className = "bg-slate-700 p-3 rounded"
+    card.className = "bg-slate-700 p-3 rounded space-y-2"
 
     let options = ""
     if (p.category === "ขนมจีน") {
@@ -122,11 +124,11 @@ async function loadMenu() {
 
       options = `
         <label class="block text-sm">
-          <input type="checkbox" class="sp"> พิเศษ (+10)
+          <input type="checkbox" class="sp mr-1"> พิเศษ (+10)
         </label>
-        <label class="block text-sm mt-1">
+        <label class="block text-sm">
           ผสมน้ำ (+10)
-          <select class="mix text-black ml-1">
+          <select class="mix text-black ml-1 rounded">
             <option value="">-- ไม่ผสม --</option>
             ${mixOptions.map(m => `<option value="${m.id}">${m.name}</option>`).join("")}
           </select>
@@ -137,10 +139,10 @@ async function loadMenu() {
     card.innerHTML = `
       <div class="flex justify-between items-center">
         <div>
-          <div class="font-bold">${p.name}</div>
-          <div>${p.price} บาท</div>
+          <div class="font-bold text-base">${p.name}</div>
+          <div class="text-sm">${p.price} บาท</div>
         </div>
-        <button class="bg-blue-600 px-4 rounded">เพิ่ม</button>
+        <button class="bg-blue-600 px-4 py-2 rounded text-sm">เพิ่ม</button>
       </div>
       ${options}
     `
@@ -162,7 +164,7 @@ async function loadMenu() {
       })
 
       beep.currentTime = 0
-      beep.play()
+      beep.play().catch(()=>{})
 
       Swal.fire({
         toast: true,
@@ -170,7 +172,7 @@ async function loadMenu() {
         icon: "success",
         title: "เพิ่มรายการแล้ว",
         showConfirmButton: false,
-        timer: 1200
+        timer: 1000
       })
     }
 
@@ -204,16 +206,16 @@ function renderCart() {
     div.className = "bg-slate-700 p-2 rounded flex justify-between items-center"
 
     div.innerHTML = `
-      <div>
+      <div class="text-sm">
         ${item.name}
         ${item.option_special ? "(พิเศษ)" : ""}
         ${mixName ? `(ผสม ${mixName})` : ""}
-        <div class="text-sm text-gray-300">${item.price} บาท / ที่</div>
+        <div class="text-xs text-gray-300">${item.price} บาท / ที่</div>
       </div>
       <div class="flex items-center gap-2">
-        <button class="btn-minus px-2 bg-slate-600">-</button>
-        <span>${item.qty}</span>
-        <button class="btn-plus px-2 bg-slate-600">+</button>
+        <button class="btn-minus px-2 py-1 bg-slate-600 rounded">-</button>
+        <span class="min-w-[20px] text-center">${item.qty}</span>
+        <button class="btn-plus px-2 py-1 bg-slate-600 rounded">+</button>
       </div>
     `
 
@@ -253,11 +255,7 @@ async function submitOrder() {
 
   if (!confirm.isConfirmed) return
 
-  Swal.fire({
-    title: "กำลังส่งออร์เดอร์",
-    allowOutsideClick: false,
-    didOpen: () => Swal.showLoading()
-  })
+  Swal.fire({ title: "กำลังส่งออร์เดอร์", allowOutsideClick: false, didOpen: () => Swal.showLoading() })
 
   const { data: order } = await sb
     .from("orders")
@@ -286,12 +284,7 @@ async function submitOrder() {
   renderCart()
   loadTables()
 
-  Swal.fire({
-    icon: "success",
-    title: "ส่งออร์เดอร์เรียบร้อย",
-    timer: 1500,
-    showConfirmButton: false
-  })
+  Swal.fire({ icon: "success", title: "ส่งออร์เดอร์เรียบร้อย", timer: 1200, showConfirmButton: false })
 }
 
 /* ================= INIT ================= */
