--- a/payment.html
+++ b/payment.html
@@ -11,12 +11,12 @@
 <link rel="icon" href="data:,">
 </head>
 
-<body class="bg-slate-900 text-white min-h-screen p-4">
+<body class="bg-slate-900 text-white min-h-screen p-2 md:p-4">
 
 <!-- 🔊 เปิดเสียง -->
 <button
   id="enableSoundBtn"
-  class="mb-4 bg-yellow-500 text-black px-4 py-2 rounded font-bold">
+  class="mb-3 w-full md:w-auto bg-yellow-500 text-black px-4 py-3 rounded font-bold">
   🔊 เปิดเสียงแจ้งเตือน
 </button>
 
@@ -25,37 +25,60 @@
   src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg">
 </audio>
 
-<div class="max-w-6xl mx-auto grid grid-cols-12 gap-4">
+<div class="
+  max-w-6xl mx-auto
+  grid grid-cols-1 gap-3
+  md:grid-cols-12 md:gap-4
+">
 
   <!-- โต๊ะ -->
-  <div class="col-span-3 bg-slate-800 rounded-xl p-4">
-    <h2 class="font-bold mb-3">🪑 โต๊ะที่พร้อมคิดเงิน</h2>
-    <div id="tableList" class="space-y-2"></div>
+  <div class="md:col-span-3 bg-slate-800 rounded-xl p-3">
+    <h2 class="font-bold mb-3 text-lg">🪑 โต๊ะที่พร้อมคิดเงิน</h2>
+    <div
+      id="tableList"
+      class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-1 gap-2">
+    </div>
   </div>
 
   <!-- บิล -->
-  <div class="col-span-9 bg-slate-800 rounded-xl p-4">
-    <h2 class="font-bold mb-3">🧾 บิลรวมทั้งโต๊ะ</h2>
+  <div class="md:col-span-9 bg-slate-800 rounded-xl p-3 flex flex-col">
+    <h2 class="font-bold mb-3 text-lg">🧾 บิลรวมทั้งโต๊ะ</h2>
 
-    <div id="billItems" class="space-y-2 mb-4"></div>
+    <!-- รายการ -->
+    <div
+      id="billItems"
+      class="space-y-2 mb-4 flex-1 overflow-y-auto max-h-[45vh] md:max-h-none">
+    </div>
 
+    <!-- สรุป / ชำระเงิน -->
     <div class="border-t pt-4 space-y-4">
-      <div class="text-xl font-bold">
-        รวมทั้งหมด: <span id="totalPrice">0</span> บาท
+      <div class="text-xl font-bold flex justify-between">
+        <span>รวมทั้งหมด</span>
+        <span><span id="totalPrice">0</span> บาท</span>
       </div>
 
       <div class="flex gap-3">
-        <button id="cashBtn" class="bg-green-600 px-4 py-2 rounded">💵 เงินสด</button>
-        <button id="qrBtn" class="bg-blue-600 px-4 py-2 rounded">📱 PromptPay</button>
+        <button
+          id="cashBtn"
+          class="flex-1 bg-green-600 px-4 py-3 rounded text-lg">
+          💵 เงินสด
+        </button>
+        <button
+          id="qrBtn"
+          class="flex-1 bg-blue-600 px-4 py-3 rounded text-lg">
+          📱 PromptPay
+        </button>
       </div>
 
       <div id="qrBox" class="hidden text-center">
-        <img id="qrImg" class="mx-auto w-48 bg-white p-2 rounded" />
+        <img
+          id="qrImg"
+          class="mx-auto w-48 bg-white p-2 rounded" />
       </div>
 
       <button
         id="payBtn"
-        class="w-full bg-yellow-500 py-2 rounded disabled:opacity-40"
+        class="w-full bg-yellow-500 py-3 rounded text-lg disabled:opacity-40"
         disabled>
         ✅ ยืนยันชำระเงิน
       </button>
@@ -119,7 +142,7 @@ async function loadOpenTables() {
 
   tableIds.forEach(tableId => {
     const btn = document.createElement("button")
-    btn.className = "w-full bg-blue-600 py-2 rounded"
+    btn.className = "w-full bg-blue-600 py-3 rounded font-bold"
     btn.textContent = `โต๊ะ ${tableMap[tableId]}`
     btn.onclick = () => loadBillByTable(tableId)
     tableList.appendChild(btn)
@@ -210,7 +233,6 @@ payBtn.onclick = async () => {
     .update({ status: "available" })
     .eq("id", currentTableId)
 
-  // 🔔 เล่นเสียงเมื่อจ่ายเงินสำเร็จ
   if (soundEnabled) {
     paySound.currentTime = 0
     paySound.play().catch(()=>{})
