--- a/payment.html
+++ b/payment.html
@@ -13,13 +13,7 @@
 
 <body class="bg-slate-900 text-white min-h-screen p-2 md:p-4">
 
-<!-- 🔊 เปิดเสียง -->
-<button
-  id="enableSoundBtn"
-  class="mb-3 w-full md:w-auto bg-yellow-500 text-black px-4 py-3 rounded font-bold">
-  🔊 เปิดเสียงแจ้งเตือน
-</button>
-
+<!-- 🔊 เสียงคิดเงิน -->
 <audio
   id="paySound"
   src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg">
@@ -44,7 +38,7 @@
   <div class="md:col-span-9 bg-slate-800 rounded-xl p-3 flex flex-col">
     <h2 class="font-bold mb-3 text-lg">🧾 บิลรวมทั้งโต๊ะ</h2>
 
-    <!-- รายการ -->
+    <!-- รายการบิล -->
     <div
       id="billItems"
       class="space-y-2 mb-4 flex-1 overflow-y-auto max-h-[45vh] md:max-h-none">
@@ -96,21 +90,25 @@ const sb = supabase.createClient(
 
 const PROMPTPAY_ID = "0936494961"
 
-/* ================= SOUND ================= */
+/* ================= SOUND AUTO UNLOCK ================= */
 const paySound = document.getElementById("paySound")
-let soundEnabled = false
+let soundUnlocked = false
 
-document.getElementById("enableSoundBtn").onclick = async () => {
-  try {
-    await paySound.play()
-    paySound.pause()
-    paySound.currentTime = 0
-    soundEnabled = true
-    document.getElementById("enableSoundBtn").remove()
-  } catch (e) {
-    console.warn("Sound not enabled yet")
-  }
+function unlockSoundOnce() {
+  if (soundUnlocked) return
+  paySound.play()
+    .then(() => {
+      paySound.pause()
+      paySound.currentTime = 0
+      soundUnlocked = true
+      console.log("🔊 Sound unlocked")
+    })
+    .catch(() => {})
 }
+
+// แตะอะไรก็ได้ครั้งแรก = เปิดเสียง
+document.addEventListener("click", unlockSoundOnce, { once: true })
+document.addEventListener("touchstart", unlockSoundOnce, { once: true })
 
 /* ================= STATE ================= */
 let currentTableId = null
@@ -149,7 +147,7 @@ async function loadOpenTables() {
   })
 }
 
-/* ================= LOAD BILL BY TABLE ================= */
+/* ================= LOAD BILL ================= */
 async function loadBillByTable(tableId) {
   currentTableId = tableId
   paymentMethod = null
@@ -233,7 +231,8 @@ payBtn.onclick = async () => {
     .update({ status: "available" })
     .eq("id", currentTableId)
 
-  if (soundEnabled) {
+  // 🔔 เสียงตอนชำระเงินสำเร็จ
+  if (soundUnlocked) {
     paySound.currentTime = 0
     paySound.play().catch(()=>{})
   }
